TWC3119-574 - Fix Tender Table Editor horizontal scrollbar issue (#2026)

--- a/Intel.MyDeals/Client/src/app/contract/tenderManager/tenderManager.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/tenderManager/tenderManager.component.css
@@ -3,61 +3,64 @@
     overflow: auto !important
 }
 
-    .editor101 h4 {
-        margin-top: 0;
-        color: #0071C5
-    }
+.editor101 h4 {
+    margin-top: 0;
+    color: #0071C5
+}
 
-    .editor101 .pnl {
-        margin: 10px 10px;
-        border: 1px solid #e7e7e8
-    }
+.editor101 .pnl {
+    margin: 10px 10px;
+    border: 1px solid #e7e7e8
+}
 
-    .editor101 .head {
-        border-bottom: 1px solid #e7e7e8;
-        background-color: #e7e7e8;
-        padding: 6px;
-        font-size: 16px;
-        color: #0071C5;
-        font-weight: 600
-    }
+.editor101 .head {
+    border-bottom: 1px solid #e7e7e8;
+    background-color: #e7e7e8;
+    padding: 6px;
+    font-size: 16px;
+    color: #0071C5;
+    font-weight: 600
+}
 
-    .editor101 .body {
-        padding: 5px
-    }
+.editor101 .body {
+    padding: 5px
+}
 
-    .editor101 .icon {
-        text-align: center;
-        margin: 5px 7px;
-        width: 70px
-    }
+.editor101 .icon {
+    text-align: center;
+    margin: 5px 7px;
+    width: 70px
+}
 
-        .editor101 .icon i {
-            color: #00AEEF;
-            font-size: 30px
-        }
+.editor101 .icon i {
+    color: #00AEEF;
+    font-size: 30px
+}
 
-            .editor101 .icon i.inverse {
-                color: #ffffff;
-                font-size: 30px;
-                background-color: #00AEEF;
-                border-radius: 4px;
-                padding: 4px
-            }
+.editor101 .icon i.inverse {
+    color: #ffffff;
+    font-size: 30px;
+    background-color: #00AEEF;
+    border-radius: 4px;
+    padding: 4px
+}
 
-        .editor101 .icon div {
-            font-weight: 600
-        }
+.editor101 .icon div {
+    font-weight: 600
+}
 
-        .editor101 .icon p {
-            margin: 6px 0
-        }
+.editor101 .icon p {
+    margin: 6px 0
+}
 
-#tenderWidPD, #tenderWidDE, #tenderWidMC, #tenderWidPTR {
+#tenderWidPD,
+#tenderWidDE,
+#tenderWidMC,
+#tenderWidPTR {
     cursor: pointer !important
 }
 
-.k-master-row > td {
+.k-master-row>td {
     border-top: 2px solid #b1babf !important
 }
 
@@ -179,11 +182,11 @@ button.k-button.tender-okbtn {
     font-weight: normal !important
 }
 
-    button.k-button.tender-okbtn:hover {
-        color: #fff !important;
-        border-color: #0071c5 !important;
-        background-color: #0071c5 !important
-    }
+button.k-button.tender-okbtn:hover {
+    color: #fff !important;
+    border-color: #0071c5 !important;
+    background-color: #0071c5 !important
+}
 
 button.k-button.tender-cancelbtn {
     font-family: 'Intel Clear' !important;
@@ -193,11 +196,11 @@ button.k-button.tender-cancelbtn {
     color: #444444 !important
 }
 
-    button.k-button.tender-cancelbtn:hover {
-        color: #444 !important;
-        border-color: #ebebeb !important;
-        background-color: #ebebeb !important
-    }
+button.k-button.tender-cancelbtn:hover {
+    color: #444 !important;
+    border-color: #ebebeb !important;
+    background-color: #ebebeb !important
+}
 
 p.tender-del-head-style {
     font-family: 'Intel Clear' !important;
@@ -206,6 +209,7 @@ p.tender-del-head-style {
     padding-top: 20px !important;
     color: #444 !important
 }
+
 .performanceBar {
     position: relative;
     left: 87% !important;
